--- a/code/cargo.toml
+++ b/code/cargo.toml
@@ -1,5 +1,10 @@
-[dependenvcies]
+[dependencies]
 once_cell = "1.18.0"
 csv = "1"
 serde = { version = "1", features = ["derive"] }
+serdere_json = "1.0"
 calamine = "0.29.0"    # Excel reader (XLS, XLSX, ODS…) :contentReference[oaicite:0]{index=0}
+chrono = "0.4"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["macros", "time", "test-util"] }
